# arte-chatbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY_PR108.md  Makefile  README.md  actualizacion-hasta-sprint-2-chatbot.md  actualizacion-sprint-2-al-5-para-word.md  diapositivas-sprint-1-2.md  diapositivas-sprint-2-al-5.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest_results.txt  tools_log.txt
.atl/: skill-registry.md
.engram/: manifest.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: admin-panel.yml  ci.yml  deploy.yml
.kilo/: package-lock.json
.kilo/plans/: 1775281641236-brave-mountain.md  1775736119225-clever-panda.md  1776220052709-glowing-garden.md  1776825855123-jolly-canyon.md  1780686329491-sunny-nebula.md
.kilocode/: package-lock.json
admin/: Dockerfile  nginx.conf
admin-panel/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
admin-panel/__tests__/: admin-chat.test.tsx  slice3.test.tsx  slice4.test.tsx  slice5.test.tsx  slice6.test.tsx
admin-panel/app/: globals.css  layout.tsx
admin-panel/components/: config-form.tsx  (+9 more)
backend/: Dockerfile  __init__.py  main.py  requirements.txt
docs/: async-queue-design.md  deployment.md  diagnostico_tool_calls_20260516.md  issues-async-queue.md
evaluation/: README.md  __init__.py  dataset.json  hallucination_check.py  mock_data_generator.py  quality_report.ipynb  s3_client.py  storage.py  upload_mock_to_s3.py
frontend/: Dockerfile  entrypoint.sh  index.html  nginx.conf
infrastructure/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  variables.tf
rag/: __init__.py  escalation.py
scripts/: deploy-local-staging.sh  deployment_guard_checks.py  ec2_compose_module_checks.py  generate_index.py  phase4_verification_checks.py  prod_terraform_wiring_checks.py  setup-github-oidc.sh  terraform_foundation_checks.py  workflow_deploy_checks.py
(+243 files in other folders)
