[dependency-groups]
dev = [
  "pytest",
  "httpx"
]
lint = [
  "ruff"
]
typecheck = [
  "mypy"
]

[project]
name = "arte-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.75",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "ipywidgets>=8.1.8",
    "jsonschema>=4.21.0",
    "numpy>=2.4.4",
    "openai>=1.68.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "uvicorn>=0.27.0",
]

[tool.pytest.ini_options]
markers = ["integration: marks tests as integration tests"]
